# BartenderBot

./: README.md  hsv.ipynb  setupFakeEE.sh  setupReal.sh  setupRealEE.sh
implementation/: CMakeLists.txt  opencv.py  package.xml
implementation/MainBrain/: CMakeLists.txt  package.xml
implementation/MainBrain/src/: MainBrain.cpp
implementation/arm_movement/: CMakeLists.txt  package.xml
implementation/arm_movement/launch/: move_to_marker.launch.py
implementation/arm_movement/src/: arm_brain.cpp  move_to_marker.cpp  test_brain.cpp
implementation/bottle_marker/: CMakeLists.txt  package.xml
implementation/bottle_marker/src/: bottle_marker.cpp
implementation/brain_msgs/: CMakeLists.txt  package.xml
implementation/brain_msgs/msg/: Command.msg
implementation/cv_bringup1/: package.xml  setup.cfg  setup.py
implementation/cv_bringup1/launch/: cv_bringup1.launch.py
implementation/detect_bac/: package.xml  setup.py
implementation/detect_bac/detect_bac/: detect_node.py  tf_broadcast.py  tf_listener.py
implementation/detect_bac/launch/: start.launch.py
implementation/end_effector/pizza_cutter_description/: CMakeLists.txt  package.xml
implementation/end_effector/pizza_cutter_description/launch/: display.launch.py
implementation/end_effector/pizza_cutter_description/meshes/: Base.STL  Claw.STL
implementation/end_effector/pizza_cutter_description/rviz/: display.rviz
implementation/end_effector/pizza_cutter_description/urdf/: end_effector.urdf
implementation/image_point_cloud_package/: package.xml  setup.cfg  setup.py
implementation/image_point_cloud_package/image_point_cloud_package/: ROSimage_point_cloud.py
implementation/lab2_transformation/: CMakeLists.txt  package.xml
implementation/lab2_transformation/src/: dynamic_ball_transform.cpp  static_camera_transform.cpp
implementation/main-brain/: CMakeLists.txt  package.xml
implementation/main-brain/src/: main_brain.cpp
implementation/transformation/: CMakeLists.txt  package.xml
implementation/transformation/src/: dynamic_ball_transform.cpp  static_camera_transform.cpp  tf_listener.cpp
implementation/ur_moveit_config/srdf/: ur_with_end_effector.xacro
implementation/ur_with_end_effector/ur_with_end_effector_description/: CMakeLists.txt  package.xml
implementation/ur_with_end_effector/ur_with_end_effector_description/rviz/: display.rviz
implementation/ur_with_end_effector_description/: CMakeLists.txt  package.xml
implementation/ur_with_end_effector_description/config/: joint_limits.yaml  ompl_planning.yaml
implementation/ur_with_end_effector_description/config/ur5e/: visual_parameters.yaml
implementation/ur_with_end_effector_description/launch/: display.launch.py
implementation/ur_with_end_effector_description/urdf/: ur_with_end_effector.xacro
implementation/vision_opencv/vision_opencv/: vision_opencv.py
implementation/vision_ros_msgs/msg/: BoundingBox.msg
implementation/yolov8_ros/yolov8_bringup/launch/: yolov8.launch.py
implementation/yolov8_ros/yolov8_ros/yolov8_ros/: yolov8_node.py
